--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
     <link rel="icon" href="./assets/favicon.jpg" type="image/x-icon" />
-
   </head>
   <body>
     <nav id="desktop-nav">
@@ -43,11 +42,12 @@
         <img src="./assets/profile.png" alt="Ayush Anand profile picture" />
       </div>
       <div class="section__text">
-        <p class="section__text__p1">Hello, I'm</p>
+        <p class="section__text__p1">I'm</p>
         <!-- <h1 class="title">Ayush Anand</h1> -->
         <p class="section__text__p2"><span class="role"></span></p>
         <div class="btn-container">
-          <button class="btn btn-color-2"
+          <button
+            class="btn btn-color-2"
             onclick="window.open('./assets/resume.pdf')"
           >
             Download CV
@@ -62,13 +62,13 @@
             alt="My LinkedIn profile"
             class="icon"
             onclick="window.open('https://linkedin.com/in/ayushanand07', '_blank')"
-            />
+          />
           <img
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
             onclick="window.open('https://github.com/ayushanand0', '_blank')"
-            />
+          />
         </div>
       </div>
     </section>
@@ -86,11 +86,7 @@
         <div class="about-details-container">
           <div class="about-containers">
             <div class="details-container">
-              <img
-                src="./assets/skills.png"
-                alt="Skills icon"
-                class="icon"
-              />
+              <img src="./assets/skills.png" alt="Skills icon" class="icon" />
               <h3>Skills</h3>
               <p>Frontend Development</p>
             </div>
@@ -106,14 +102,17 @@
           </div>
           <div class="text-container">
             <p>
-                I am a passionate front-end developer skilled in HTML, CSS, and JavaScript. Dedicated to crafting
-                seamless, responsive, and user-friendly web experiences. Proficient in modern frameworks like React and
-                Vue.js. <br>
-                I am also an innovative AR creator merging imagination with technology. Proficient in creating immersive
-                augmented reality experiences that captivate and engage users. Experienced in AR development tools and
-                techniques. Let's transform ideas into interactive AR wonders that redefine reality. <br>
-                Committed to staying updated with the latest trends. Let's collaborate and create impactful digital
-                solutions together.
+              I am a passionate front-end developer skilled in HTML, CSS, and
+              JavaScript. Dedicated to crafting seamless, responsive, and
+              user-friendly web experiences. Proficient in modern frameworks
+              like React and Vue.js. <br />
+              I am also an innovative AR creator merging imagination with
+              technology. Proficient in creating immersive augmented reality
+              experiences that captivate and engage users. Experienced in AR
+              development tools and techniques. Let's transform ideas into
+              interactive AR wonders that redefine reality. <br />
+              Committed to staying updated with the latest trends. Let's
+              collaborate and create impactful digital solutions together.
             </p>
           </div>
         </div>
@@ -360,9 +359,61 @@
         onclick="location.href='./#contact'"
       />
     </section>
+
+    
+    <!-- ----------- Contact Section ---------- -->
+
+
     <section id="contact">
       <p class="section__text__p1">Get in Touch</p>
       <h1 class="title">Contact Me</h1>
+      <div>
+        <form
+          id="contact-form"
+          action="https://formsubmit.co/ayush07anand@gmail.com"
+          method="POST"
+        >
+          <div class="row">
+            <div class="col">
+              <div class="form-control">
+                <div class="form-inputs">
+                  <input
+                    type="text"
+                    name="name"
+                    class="input-field"
+                    placeholder="Name"
+                    required
+                  />
+                  <input
+                    type="email"
+                    name="email"
+                    class="input-field"
+                    placeholder="Email"
+                    required
+                  />
+                </div>
+                <div class="text-area">
+                  <textarea name="message" placeholder="Message" req></textarea>
+                </div>
+
+                <input type="hidden" name="_captcha" value="false" />
+
+                <input
+                  type="hidden"
+                  name="_next"
+                  value="https://ayushanand0.github.io/thanks.html"
+                />
+
+                <div class="form-button">
+                  <button type="submit" class="btn" id="btn">
+                    Send <i class="uil uil-message"></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
           <img
@@ -378,10 +429,15 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com/in/ayushanand07/">LinkedIn</a></p>
+          <p>
+            <a href="https://www.linkedin.com/in/ayushanand07/">LinkedIn</a>
+          </p>
         </div>
       </div>
     </section>
+
+    <!-- ----------- Footer Section ---------- -->
+
     <footer>
       <nav>
         <div class="nav-links-container">
