--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                 <input
                   type="hidden"
                   name="_next"
-                  value="https://ayushanand0.github.io/thanks.html"
+                  value="https://ayushanand0.github.io/portfolio/thanks.html"
                 />
 
                 <div class="form-button">
