--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
     <section id="contact">
       <p class="section__text__p1">Get in Touch</p>
       <h1 class="title">Contact Me</h1>
-      <div>
+      <div class="contact-form-container">
         <form
           id="contact-form"
           action="https://formsubmit.co/ayush07anand@gmail.com"
@@ -392,8 +392,8 @@
                     required
                   />
                 </div>
-                <div class="text-area">
-                  <textarea name="message" placeholder="Message" req></textarea>
+                <div class="text-area form-inputs">
+                  <textarea name="message" placeholder="Message" required></textarea>
                 </div>
 
                 <input type="hidden" name="_captcha" value="false" />
@@ -421,7 +421,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:ayush07anand@gmail.com">@gmail.com</a></p>
+          <p><a href="mailto:ayush07anand@gmail.com">ayush07anand@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
